# mag-open-mpi-labs

./: .gitignore  CMakeLists.txt  readme.md
lab1/: SearchMaxValueForColumnInMatrix.cpp  readme.md
lab2/: SearchMaxValueForColumnInMatrixWithoutOmpFor.cpp  readme.md
lab3/: SimpleCalculation.cpp  readme.md
lab4/: EffictiveSimpleCalculation.cpp  readme.md
lab5/: WorkForString.cpp  readme.md
